# hermes-plugin-native-extract

./: AGENTS.md  Makefile  README.md  __init__.py  plugin.yaml  pyproject.toml  schemas.py  tools.py
docs/superpowers/plans/: 2026-04-04-native-extract-plugin-migration.md
skill/: SKILL.md
tests/: test_plugin.py
